Change port and host settings

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+MY_PORT=8080
+MY_HOST='127.0.0.1'
 CORSANYWHERE_WHITELIST='http://localhost:3000, https://slaw-app.herokuapp.com'
 CORSANYWHERE_BLACKLIST=''
 CORSANYWHERE_RATELIMIT='50 3 http://localhost:3000, 50 3 https://slaw-app.herokuapp.com/#/channels'
