--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MY_PORT=8080
 MY_HOST='127.0.0.1'
-CORSANYWHERE_WHITELIST='http://localhost:3000, https://slaw-app.herokuapp.com, http://slaw-app.herokuapp.com'
+CORSANYWHERE_WHITELIST=''
 CORSANYWHERE_BLACKLIST=''
-CORSANYWHERE_RATELIMIT='50 3 http://localhost:3000, 50 3 https://slaw-app.herokuapp.com, 50 3 http://slaw-app.herokuapp.com'
+CORSANYWHERE_RATELIMIT=''
